# enpidzi

./: .gitignore  CMakeLists.txt  main.cpp  tests.cpp
inc/: AdvancedData.hpp  ModernUtils.hpp  student.hpp
src/: AdvancedData.cpp  main.cpp  student.cpp
